@@ -96,6 +96,8 @@ public class GRApplet extends JApplet {
 		String cookieDomain = getParameter("gr_cookie_domain");
 		String cookiePath = getParameter("gr_cookie_path");
 		String userAgent = getParameter("gr_user_agent");
+		String cookie1Name = getParameter("gr_cookie1_name");
+		String cookie1Value = getParameter("gr_cookie1_value");
 
 		info.albumName = getParameter("gr_album");
 
@@ -106,6 +108,7 @@ public class GRApplet extends JApplet {
 		Log.log(Log.LEVEL_INFO, MODULE, "gr_cookie_name: " + cookieName);
 		Log.log(Log.LEVEL_INFO, MODULE, "gr_cookie_domain: " + cookieDomain);
 		Log.log(Log.LEVEL_INFO, MODULE, "gr_cookie_path: " + cookiePath);
+		Log.log(Log.LEVEL_INFO, MODULE, "gr_cookie1_name: " + cookie1Name);
 		Log.log(Log.LEVEL_INFO, MODULE, "gr_album: " + info.albumName);
 		Log.log(Log.LEVEL_INFO, MODULE, "gr_user_agent: " + userAgent);
 
@@ -198,6 +201,11 @@ public class GRApplet extends JApplet {
 		Cookie cookie = new Cookie(cookieName, cookieValue, cookieDomain, cookiePath, null, false);
 		Log.log(Log.LEVEL_TRACE, MODULE, "Adding cookie: " + cookie);
 		CookieModule.addCookie(cookie);
+		if (cookie1Name != null) {
+			Cookie cookie1 = new Cookie(cookie1Name, cookie1Value, cookieDomain, cookiePath, null, false);
+			Log.log(Log.LEVEL_TRACE, MODULE, "Adding cookie: " + cookie1);
+			CookieModule.addCookie(cookie1);
+		}
 
 		return info;
 	}
